crates/patok-tui/tests/snapshots/theme_modal__a_preview_recolours_the_whole_shell.snap
---
source: crates/patok-tui/tests/theme_modal.rs
expression: "styled_rows(&buffer, &[23, 21])"
---
 |239,241,245|76,79,105 S|239,241,245|76,79,105 T|239,241,245|76,79,105 O|239,241,245|76,79,105 P|239,241,245|76,79,105 P|239,241,245|76,79,105 E|239,241,245|76,79,105 D|239,241,245|76,79,105  |239,241,245|76,79,105  |239,241,245|76,79,105 s|239,241,245|76,79,105 p|239,241,245|76,79,105 r|239,241,245|76,79,105 i|239,241,245|76,79,105 n|239,241,245|76,79,105 t|239,241,245|76,79,105  |239,241,245|76,79,105  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |239,241,245|76,79,105 E|239,241,245|76,79,105 n|239,241,245|76,79,105 t|239,241,245|76,79,105 e|239,241,245|76,79,105 r|239,241,245|76,79,105  |239,241,245|76,79,105  |124,127,148|239,241,245 s|124,127,148|239,241,245 t|124,127,148|239,241,245 a|124,127,148|239,241,245 r|124,127,148|239,241,245 t|124,127,148|239,241,245  |124,127,148|239,241,245  |192,79,166|239,241,245 m|192,79,166|239,241,245  |192,79,166|239,241,245  |124,127,148|239,241,245 m|124,127,148|239,241,245 e|124,127,148|239,241,245 n|124,127,148|239,241,245 u|124,127,148|239,241,245  |124,127,148|239,241,245
 |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245 │|76,79,105|239,241,245  |124,127,148|239,241,245 a|124,127,148|239,241,245  |124,127,148|239,241,245 a|124,127,148|239,241,245 d|124,127,148|239,241,245 d|124,127,148|239,241,245  |124,127,148|239,241,245 t|124,127,148|239,241,245 a|124,127,148|239,241,245 s|124,127,148|239,241,245 k|124,127,148|239,241,245 s|124,127,148|239,241,245  |124,127,148|239,241,245 ·|124,127,148|239,241,245  |124,127,148|239,241,245 i|124,127,148|239,241,245  |124,127,148|239,241,245 i|124,127,148|239,241,245 n|124,127,148|239,241,245 j|124,127,148|239,241,245 e|124,127,148|239,241,245 c|124,127,148|239,241,245 t|124,127,148|239,241,245  |124,127,148|239,241,245 t|124,127,148|239,241,245 a|124,127,148|239,241,245 s|124,127,148|239,241,245 k|124,127,148|239,241,245  |124,127,148|239,241,245 ·|124,127,148|239,241,245  |124,127,148|239,241,245 E|124,127,148|239,241,245 n|124,127,148|239,241,245 t|124,127,148|239,241,245 e|124,127,148|239,241,245 r|124,127,148|239,241,245  |124,127,148|239,241,245 s|124,127,148|239,241,245 t|124,127,148|239,241,245 a|124,127,148|239,241,245 r|124,127,148|239,241,245 t|124,127,148|239,241,245  |124,127,148|239,241,245 ·|124,127,148|239,241,245  |124,127,148|239,241,245 ↑|124,127,148|239,241,245 ↓|124,127,148|239,241,245  |124,127,148|239,241,245 s|124,127,148|239,241,245 c|124,127,148|239,241,245 r|124,127,148|239,241,245 o|124,127,148|239,241,245 l|124,127,148|239,241,245 l|124,127,148|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245  |76,79,105|239,241,245 │|76,79,105|239,241,245
