crates/patok-tui/tests/snapshots/theme_modal__the_picker_with_the_dark_group_folded.snap
---
source: crates/patok-tui/tests/theme_modal.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder | Claude ────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │┌────────────────────── Theme ──────────────── [ x ] ┐            │
[  Build   ]││▶ ▸ Dark                                            │            │
      ↓     └│  ▾ Light                                           │────────────┘
[  Review  ]┌│      atom_one_light                                │────────────┐
            ││      tokyo_night_day                               │            │
[ Discover ]││      catppuccin_latte                              │            │
            ││      solarized_light                               │            │
            ││      gruvbox_light                                 │            │
            ││                                                    │            │
            ││                                                    │            │
            ││                                                    │            │
            ││                                                    │            │
            ││                                                    │            │
            ││                                                    │            │
            ││ ↑↓/jk previews      [ Enter ] Save  [ Esc ] Cancel │            │
            │└────────────────────────────────────────────────────┘            │
            │                                                                  │
            │ a add tasks · i inject task · Enter start · ↑↓ scroll            │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                          Enter  start  m  menu
